# solitaire

./: .gitignore  AbstractCardStack.h  CMakeLists.txt  Card.h  Cursor.h  Deck.h  FoundationCardStack.h  GameController.h  Key.h  README.md  Solitaire.h  StockCardStack.h  TableauCardStack.h  WasteCardStack.h  main.cpp
